--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,26 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    //SDK and tools
+    // Min , Target & compiled SDK Version
+    minSdkVersion = 19
+    targetSdkVersion = 29
+    compileSdkVersion = 29
+
+    //App dependencies versions
+    app_compat_version = "1.1.0"
+    junit_version = "4.12"
+    moshi_version = "1.8.0"
+    gson_version = "2.8.5"
+    okhttp3_version = "3.12.0"
+    retrofit2_version = "2.5.0"
+    kotlin_coroutine_version = "1.0.1"
+    mockito_version = "2.8.47"
+    material_version = "1.0.0"
+    constraint_layout_version = "1.1.3"
+    navigation_version = "2.2.0-alpha02"
+    lifecycle_version = "2.2.0-alpha04"
+
+}
