--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,23 +83,26 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
-        //Kotlin Coroutines
+    //Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
-        //Moshi
+    //Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
-        //gson
+    //gson
     implementation "com.google.code.gson:gson:$gson_version"
-        //Okhttp3
+    //Okhttp3
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-        //Retrofit2
+    //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation  "com.squareup.retrofit2:converter-gson:$retrofit2_version"
-        // Architecture Components
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    // Architecture Components
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
@@ -108,18 +111,15 @@ dependencies {
 
     // Local Unit tests dependencies
     testImplementation "junit:junit:$junit_version"
-        // Mockito
+    // Mockito
     testImplementation "org.mockito:mockito-android:$mockito_version"
     // Android unit tests dependencies
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "androidx.arch.core:core-testing:$arch_test"
     androidTestImplementation "androidx.arch.core:core-runtime:$arch_test"
-
     //    add viewModelScope
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
