--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,10 +74,10 @@ android {
 
 dependencies {
     def core_ktx = "1.1.0"
-    def arch_test = "2.1.0-rc01"
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    //kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //APP dependencies
     implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.core:core-ktx:$core_ktx"
@@ -111,15 +111,19 @@ dependencies {
 
     // Local Unit tests dependencies
     testImplementation "junit:junit:$junit_version"
-    // Mockito
+        // Robolectric
+    testImplementation "org.robolectric:robolectric:$robolectric_version"
+        // Mockito
     testImplementation "org.mockito:mockito-android:$mockito_version"
+    // Espresso
+    testImplementation "androidx.test.espresso:espresso-core:$expresso_core_version"
     // Android unit tests dependencies
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation "androidx.arch.core:core-testing:$arch_test"
-    androidTestImplementation "androidx.arch.core:core-runtime:$arch_test"
+    androidTestImplementation "androidx.test:runner:$test_runner_version"
+    androidTestImplementation "androidx.arch.core:core-runtime:$arch_core_runtime"
+        //Test helpers for LiveData
+    androidTestImplementation "androidx.arch.core:core-testing:$arch_core_test"
+        // Espresso
+    androidTestImplementation "androidx.test.espresso:espresso-core:$expresso_core_version"
     //    add viewModelScope
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    //kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
