--- a/build.gradle
+++ b/build.gradle
@@ -47,5 +47,10 @@ ext {
     constraint_layout_version = "1.1.3"
     navigation_version = "2.2.0-alpha02"
     lifecycle_version = "2.2.0-alpha04"
+    robolectric_version = "4.1"
+    expresso_core_version = "3.2.0"
+    test_runner_version = "1.2.0"
+    arch_core_test = "2.1.0-rc01"
+    arch_core_runtime = "2.1.0-rc01"
 
 }
