--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ android {
     // Always show the result of every unit test, even if it passes.
     testOptions.unitTests {
         includeAndroidResources = true
+        returnDefaultValues = true
 
         all {
             testLogging {
@@ -78,7 +79,7 @@ dependencies {
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //APP dependencies
+    //APP dependencies #######
     implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "com.google.android.material:material:$material_version"
@@ -102,30 +103,32 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
-    // Architecture Components
+    // Architecture Components ########
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
-    // Local Unit tests dependencies
+    // Local Unit tests dependencies #####
     testImplementation "junit:junit:$junit_version"
-    //Test helpers for LiveData
+        //Test helpers for LiveData
     testImplementation "androidx.arch.core:core-testing:$arch_core_test"
         // Robolectric
     testImplementation "org.robolectric:robolectric:$robolectric_version"
         // Mockito
     testImplementation "org.mockito:mockito-android:$mockito_version"
-    // Espresso
+        // Espresso
     testImplementation "androidx.test.espresso:espresso-core:$expresso_core_version"
-    // Android unit tests dependencies
+    // Android unit tests dependencies ###
     androidTestImplementation "androidx.test:runner:$test_runner_version"
     androidTestImplementation "androidx.arch.core:core-runtime:$arch_core_runtime"
         //Test helpers for LiveData
     androidTestImplementation "androidx.arch.core:core-testing:$arch_core_test"
         // Espresso
     androidTestImplementation "androidx.test.espresso:espresso-core:$expresso_core_version"
+    // Mockito
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
     //    add viewModelScope
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 }
