--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    // Eventbus
+    implementation "org.greenrobot:eventbus:$event_bus_version"
     // Architecture Components ########
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
