--- a/build.gradle
+++ b/build.gradle
@@ -52,5 +52,5 @@ ext {
     test_runner_version = "1.2.0"
     arch_core_test = "2.1.0-rc01"
     arch_core_runtime = "2.1.0-rc01"
-
+    event_bus_version = "3.0.0"
 }
