+++ CurrencySelectFragment used to select code instead of spinner :(

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ android {
         }
     }
 
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     // Always show the result of every unit test, even if it passes.
     testOptions.unitTests {
         includeAndroidResources = true
