--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,18 +78,17 @@ android {
 }
 
 dependencies {
-    def core_ktx = "1.1.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //APP dependencies #######
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "com.google.android.material:material:$material_version"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+
     //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
     //Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
@@ -126,15 +125,16 @@ dependencies {
     testImplementation "org.mockito:mockito-android:$mockito_version"
     // Espresso
     testImplementation "androidx.test.espresso:espresso-core:$expresso_core_version"
-    // Android unit tests dependencies ###
+    // Android unit dependencies ###
     androidTestImplementation "androidx.test:runner:$test_runner_version"
-    androidTestImplementation "androidx.arch.core:core-runtime:$arch_core_runtime"
+//    androidTestImplementation "androidx.arch.core:core-runtime:$arch_core_runtime"
     //Test helpers for LiveData
     androidTestImplementation "androidx.arch.core:core-testing:$arch_core_test"
     // Espresso
     androidTestImplementation "androidx.test.espresso:espresso-core:$expresso_core_version"
     // Mockito
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+
     //    add viewModelScope
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 }
