--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,10 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
     // Timber
     implementation "com.jakewharton.timber:timber:$timber_version"
-
+    // Room DB
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     // Local Unit tests dependencies #####
     testImplementation "junit:junit:$junit_version"
     //Test helpers for LiveData
