--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.71'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -52,8 +52,11 @@ ext {
     test_runner_version = "1.2.0"
     arch_core_test = "2.1.0-rc01"
     arch_core_runtime = "2.1.0-rc01"
-    core_ktx = "1.1.0"
+    core_ktx = "1.2.0"
     timber_version = "4.7.1"
     room_version = "2.2.5"
     dagger2_version = "2.23.1"
+    coroutines_test_version = "1.3.4"
+    hamcrest_version = "2.1"
+    truth_version = "0.44"
 }
