--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,6 @@ android {
         debug {
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
-            minifyEnabled false
-            testCoverageEnabled true
 
         }
 
@@ -114,6 +112,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.preference:preference:1.1.0-rc01'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     //gson
     implementation "com.google.code.gson:gson:$gson_version"
@@ -160,7 +159,7 @@ dependencies {
     testImplementation "org.hamcrest:hamcrest-library:$hamcrest_version"
     testImplementation "com.google.truth:truth:$truth_version"
 
-    
+
     // Android unit dependencies ###
     androidTestImplementation "androidx.test:runner:$test_runner_version"
     // Coroutines test
