--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         versionCode 1
         versionName "0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -97,22 +98,16 @@ dependencies {
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //  Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
     //APP dependencies #######
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "com.google.android.material:material:$material_version"
-
-    //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
     //Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.preference:preference:1.1.0-rc01'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     //gson
     implementation "com.google.code.gson:gson:$gson_version"
@@ -139,6 +134,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    // WorkerManager
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.preference:preference:$preference_version"
+    // multidex
+    implementation "androidx.multidex:multidex:2.0.1"
 
 
     // Local Unit tests dependencies #####
