--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext.kotlin_version = '1.3.72'
     repositories {
         google()
         jcenter()
@@ -45,7 +45,7 @@ ext {
     mockito_version = "2.8.47"
     material_version = "1.1.0"
     constraint_layout_version = "1.1.3"
-    navigation_version = "2.2.1"
+    navigation_version = "2.2.2"
     lifecycle_version = "2.2.0"
     robolectric_version = "4.3"
     expresso_core_version = "3.2.0"
@@ -55,8 +55,10 @@ ext {
     core_ktx = "1.2.0"
     timber_version = "4.7.1"
     room_version = "2.2.5"
-    dagger2_version = "2.23.1"
+    dagger2_version = "2.25.4"
     coroutines_test_version = "1.3.4"
     hamcrest_version = "2.1"
     truth_version = "0.44"
+    work_version = "2.3.4"
+    preference_version = "1.1.1"
 }
