--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -47,10 +47,10 @@ ext {
     constraint_layout_version = "1.1.3"
     navigation_version = "2.2.2"
     lifecycle_version = "2.2.0"
-    robolectric_version = "4.3"
+    robolectric_version = "1.2.0"
     expresso_core_version = "3.2.0"
     test_runner_version = "1.2.0"
-    arch_core_test = "2.1.0-rc01"
+    arch_core_test = "2.1.0"
     arch_core_runtime = "2.1.0-rc01"
     core_ktx = "1.2.0"
     timber_version = "4.7.1"
@@ -58,7 +58,7 @@ ext {
     dagger2_version = "2.25.4"
     coroutines_test_version = "1.3.4"
     hamcrest_version = "2.1"
-    truth_version = "0.44"
+    truth_version = "1.0.1"
     work_version = "2.3.4"
     preference_version = "1.1.1"
 }
