--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ android {
             versionNameSuffix "-beta"
             minifyEnabled true
             shrinkResources true
-            useProguard true
+//            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
@@ -69,7 +69,7 @@ android {
             versionNameSuffix "-alpha"
             minifyEnabled true
             shrinkResources true
-            useProguard true
+//            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -111,9 +111,8 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
-        enabledForTests = true
+    buildFeatures {
+        dataBinding = true
     }
 
 
@@ -124,6 +123,7 @@ dependencies {
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     //  Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
     //APP dependencies #######
