--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,7 +127,6 @@ dependencies {
     // Dagger2
     implementation "com.google.dagger:dagger:$dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
-    kaptTest "com.google.dagger:dagger-compiler:$dagger2_version"
     // Architecture Components ########
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -149,6 +148,9 @@ dependencies {
 
 
     // Local Unit tests dependencies #####
+    //  dagger2
+    kaptTest "com.google.dagger:dagger-compiler:$dagger2_version"
+    //   junit
     testImplementation "junit:junit:$junit_version"
     testImplementation "androidx.test.ext:junit:1.1.1"
     testImplementation "androidx.test:runner:$test_runner_version"
